# valera

./: .gitignore  DEVELOPMENT.md  gradle.properties
.github/: test-strategy-matrix.json
.github/workflows/: build-everything.yml  publish-android.yml  publish-ios.yml  test-everything.yml
androidApp/: build.gradle.kts
androidApp/src/androidMain/: AndroidManifest.xml
androidApp/src/androidMain/assets/: dcapimatcher.wasm
gradle/: libs.versions.toml
shared/: build.gradle.kts
shared/src/androidDeviceTest/kotlin/: InstrumentedTests.android.kt
shared/src/androidHostTest/kotlin/: InstrumentedTests.android.kt
shared/src/androidMain/assets/trust/: msca-root.pem  request-trust-anchors.pem
shared/src/androidMain/kotlin/: main.android.kt
shared/src/androidMain/kotlin/matcher/: Makefile  README.md
shared/src/androidMain/kotlin/matcher_common/: cJSON.c  cJSON.h
shared/src/androidMain/kotlin/matcher_issuance/: CMakeLists.txt  README.md  credentialmanager.c  credentialmanager.h  dcql.c  dcql.h
shared/src/androidMain/kotlin/matcher_issuance/issuance/: launcher_icon.h  png_to_c_array.py  provision.c
shared/src/commonMain/composeResources/values-de/: strings.xml
shared/src/commonMain/composeResources/values-en/: strings.xml
shared/src/commonMain/kotlin/: App.kt  Exceptions.kt
shared/src/commonMain/kotlin/domain/: BuildAuthenticationConsentPageFromAuthenticationRequest.kt  BuildAuthenticationConsentPageFromAuthenticationRequestUriUseCase.kt
shared/src/commonMain/kotlin/ui/navigation/: IntentService.kt  (+1 more)
shared/src/iosMain/kotlin/: main.ios.kt
(+51 files in other folders)
